Added CSS styling to HTML structure

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
       <p class="card__description">These languages are the backbone of every website, defining structure,
         content, and presentation.</p>
 
-      <div class="card__author">
-        <img src="assets/images/image-avatar.webp" alt="Photo of Greg Hooper" class="card__avatar">
-        <p class="card__authorname">Greg Hooper</p>
-      </div>
-
     </div>
 
+    <div class="card__author">
+
+      <img src="assets/images/image-avatar.webp" alt="Photo of Greg Hooper" class="card__avatar">
+      <p class="card__author-name">Greg Hooper</p>
+
+    </div>
   </article>
 
   <footer class="attribution">
