--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <article class="card">
+  <main class="card">
 
     <img src="assets/images/illustration-article.svg" alt="Illustration for the article on HTML & CSS foundations"
       class="card__image">
@@ -41,7 +41,7 @@
       <p class="card__author-name">Greg Hooper</p>
 
     </div>
-  </article>
+  </main>
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
